--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "dependencies": {
     "@mantine/core": "7.6.1",
+    "@mantine/form": "^7.6.1",
     "@mantine/hooks": "7.6.1",
     "@next/bundle-analyzer": "^14.0.1",
     "@tabler/icons-react": "^2.40.0",
     "next": "14.0.1",
+    "openai": "^4.28.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
