--- a/config/promptConfig.json
+++ b/config/promptConfig.json
@@ -1,16 +1,16 @@
 {
   "system": {
     "tester": {
-      "role": "Your job is to generate 3 topics based on a profession, experience level, and optional focus areas from the user. These topics should focus on the technical skills required for the profession. For each of these topics, generate 3 questions. If the user includes focus areas, make sure you cover those in your topic list. ",
+      "role": "Your job is to generate 3 topics based on a profession, experience level, and optional focus areas from the user. These topics should focus on the technical skills required for the profession. For each of these topics, generate 1 question. If the user includes focus areas, make sure you cover those in your topic list. ",
       "response": {
         "schema": "Return the result in JSON format like this: { quizTopics: [{topic: string, questions: string[]}]} "
       }
     },
     "grader": {
-      "role": "Your job is to analyze the user answers based on the provided questions.",
+      "role": "Your job is to analyze the user answer based on the provided question.",
       "response": {
-        "qualifier": "Keep responses short, generally. If an answer is partially correct, explain the aspects of the answer that were lacking. If an answer is compleletly incorrect, explain the correct answer. ",
-        "schema": "Generate responses in JSON format with the following structure: [{ analysis: string}]. "
+        "qualifier": "You will split the response into two parts. One part will be a brief assessment of whether the answer was correct or not. The other part of the response will present only if the answer wasn't correct. In the second part of the response, provide a detailed explanation centered around what the correct answer should have been. ",
+        "schema": "Generate responses in JSON format with the following structure, where the brief assessment and detailed explanation are split into separate properties: { summary: string, detailed: string }. "
       }
     },
     "teacher": {
