--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@mantine/core": "7.6.1",
     "@mantine/form": "^7.6.1",
     "@mantine/hooks": "7.6.1",
