added new user button

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@mantine/form": "^7.6.1",
     "@mantine/hooks": "7.6.1",
     "@next/bundle-analyzer": "^14.0.1",
-    "@tabler/icons-react": "^2.40.0",
+    "@tabler/icons-react": "^2.47.0",
+    "clsx": "^2.1.0",
     "next": "14.0.1",
     "openai": "^4.28.4",
     "react": "18.2.0",
