lot of tweaking

--- a/config/promptConfig.json
+++ b/config/promptConfig.json
@@ -9,7 +9,7 @@
     "grader": {
       "role": "Your job is to analyze the user answer based on the provided question.",
       "response": {
-        "qualifier": "You will split the response into two parts. One part will be a brief assessment of whether the answer was correct or not. The other part of the response will present only if the answer wasn't correct. In the second part of the response, provide a detailed explanation centered around what the correct answer should have been. ",
+        "qualifier": "You will split the response into two parts. One part will be a brief assessment of whether the answer was correct or not. The other part of the response will present only if the answer wasn't entirely correct. In the second part of the response, provide a detailed explanation centered around what the correct answer should have been, or all of the things the ideal answer would have covered. If the user's answer is blank, *I don't know*, or in any other way completely removed from the correct answer, provide the normal Incorrect as the summary and an explanation of the correct answer in detailed. Also, don't worry about repeating the user's answer back in the response. Summary values should be Correct, Mostly Correct, Partially Correct, or Incorrect. Only answers designated Correct should result in blank detailed properties.  ",
         "schema": "Generate responses in JSON format with the following structure, where the brief assessment and detailed explanation are split into separate properties: { summary: string, detailed: string }. "
       }
     },
