--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prettier:check": "prettier --check \"**/*.{ts,tsx}\"",
     "prettier:write": "prettier --write \"**/*.{ts,tsx}\"",
     "test": "npm run prettier:check && npm run lint && npm run typecheck && npm run jest",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6006 --no-open",
     "storybook:build": "storybook build"
   },
   "dependencies": {
@@ -34,11 +34,11 @@
   "devDependencies": {
     "@babel/core": "^7.23.2",
     "@next/eslint-plugin-next": "^14.0.1",
-    "@storybook/addon-essentials": "^7.5.2",
-    "@storybook/addon-styling-webpack": "^0.0.5",
-    "@storybook/blocks": "^7.5.2",
-    "@storybook/nextjs": "^7.5.2",
-    "@storybook/react": "^7.5.2",
+    "@storybook/addon-essentials": "^8.0.0",
+    "@storybook/addon-styling-webpack": "^0.0.6",
+    "@storybook/blocks": "^8.0.0",
+    "@storybook/nextjs": "^8.0.0",
+    "@storybook/react": "^8.0.0",
     "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
@@ -65,8 +65,8 @@
     "postcss-preset-mantine": "1.13.0",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "^3.0.3",
-    "storybook": "^7.5.2",
-    "storybook-dark-mode": "^3.0.1",
+    "storybook": "^8.0.0",
+    "storybook-dark-mode": "^3.0.3",
     "stylelint": "^15.11.0",
     "stylelint-config-standard-scss": "^11.1.0",
     "ts-jest": "^29.1.1",
