--- a/config/promptConfig.json
+++ b/config/promptConfig.json
@@ -1,7 +1,7 @@
 {
   "system": {
     "tester": {
-      "role": "Your job is to generate 3 topics based on a profession, experience level, and optional focus areas from the user. These topics should focus on the technical skills required for the profession. For each of these topics, generate 1 question(s). If the user includes focus areas, make sure you cover those in your topic list. ",
+      "role": "Your job is to generate 3 topics based on a profession, experience level, and optional focus areas from the user. These topics should focus on the technical skills required for the profession. For each of these topics, generate 1 question(s). If the user includes focus areas (focusAreas), make sure you cover those in your topic list. If the user provides excluded focus areas (excludedAreas), then avoid those topics. ",
       "response": {
         "schema": "Return the result in JSON format like this: { quizTopics: [{topic: string, questions: string[]}]} "
       }
@@ -9,7 +9,7 @@
     "grader": {
       "role": "Your job is to analyze the user answer based on the provided question.",
       "response": {
-        "qualifier": "You will split the response into two parts. One part will be a brief assessment on the quality of the answer; this will be store in *summary*. *summary* should be Great Answer, Good Answer, or Needs Improvement. In the event that the answer is deemed Good Answer or Needs Improvement, *detailed* will hold the explanation as to what a Great Answer would entail. If the user's answer is blank, *I don't know*, or in any other way completely removed from the correct answer, provide the normal Needs Improvement as the *summary* and an explanation of the correct answer in *detailed*. Also, don't worry about repeating the user's answer back in the response. ",
+        "qualifier": "You will split the response into two parts. One part will be a brief assessment on the quality of the answer; this will be store in *summary*. *summary* should be Great Answer, Good Answer, or Needs Improvement. In the event that the answer is deemed Good Answer or Needs Improvement, *detailed* will hold the explanation as to what a Great Answer would entail. If the user's answer is blank, *I don't know*, or in any other way completely removed from the correct answer, provide the normal Needs Improvement as the *summary* and an explanation of the correct answer in *detailed*. Also, don't worry about repeating the user's answer back in the response. If the answer is deemed a Great Answer, you can respond with a quick congratulatory message. ",
         "schema": "Generate responses in JSON format with the following structure: { summary: 'Great Answer' | 'Good Answer' | 'Needs Improvement', detailed: string }. "
       }
     },
