--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@next/bundle-analyzer": "^14.0.1",
     "@tabler/icons-react": "^2.47.0",
     "clsx": "^2.1.0",
+    "mongodb": "^6.5.0",
     "next": "14.0.1",
     "openai": "^4.28.4",
     "react": "18.2.0",
