saving a ton of db work

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongodb": "^6.5.0",
     "next": "14.0.1",
     "openai": "^4.28.4",
+    "postgres": "^3.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
